--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,6 +2,20 @@
 @import "tailwindcss";
 
 
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
 h1{
   font-family: "Poppins", sans-serif;
